--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "mongoose": "^6.5.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "dotenv": "^16.0.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
