--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.8.8",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
     "dotenv": "^16.0.1",
-    "nodemon": "^2.0.19",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "nodemon": "^2.0.19"
   }
 }
