--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^9.8.8",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.8"
