--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.10.2",
     "autoprefixer": "^9.8.8",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
