--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "apollo-server": "^3.10.2",
     "autoprefixer": "^9.8.8",
     "bcryptjs": "^2.4.3",
