--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "postcss-cli": "^10.0.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
