--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "apollo-server": "^3.10.2",
+    "apollo-server-cache-redis": "^3.3.1",
     "autoprefixer": "^9.8.8",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
@@ -24,6 +25,7 @@
     "graphql-middleware": "^6.1.32",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
+    "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "postcss-cli": "^10.0.0",
