--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
-    
+    "dev": "nodemon server/index.js",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
