--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,7 +11,15 @@ jobs:
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v4.2.0 # use the explicit version number
-        with:
-          build: npm run build
-          start: npm start
+        uses: cypress-io/github-action@v4.2.9
+        uses: actions/setup-node@v2
+          with:
+            node-version:'16'
+        - name: Test the project
+          run: |
+            npm run dev
+            cd client
+            npm start
+           
+         # use the explicit version number
+      
