--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
-        uses: cypress-io/github-action@v4.2.9
-        uses: actions/setup-node@v2
+      - uses: cypress-io/github-action@v4.2.9
+      -  uses: actions/setup-node@v2
           with:
             node-version: '16'
         - name: Test the project
