--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,6 +17,7 @@ jobs:
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
       - name: Cypress run
+        run: npm i cypress
         uses: cypress-io/github-action@v4.2.0 # use the explicit version number
         with:
           start: npm start
