--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,24 +1,31 @@
-name: Cypress Tests
+name: ci
 
-on: [push]
+on:
+  push:
+    branches:
+      - 'main'
 
 jobs:
-  cypress-run:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          node-version: '16'
-      - name: Install dependencies
-        run: |
-          npm ci       
-          npm i cypress
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v4.2.0 # use the explicit version number
+        
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
         with:
-          start: npm start
+          image: irfan378/projectmanagmentapp
+          push: true
+          tags: user/app:latest
